# engineering-pdf-extractor

./: .gitignore  EXTRACTION_VALIDATION_ISSUES.md  PDF_EXTRACTION_DEMO_PLAN.md  README.md  VERSION_2_UPDATES.md  VERSION_3_UPDATES.md  flow.md  main.py  pyproject.toml
docs/architecture/: pipeline.md
docs/planning/: pdf-comparison-flow-plan.md
frontend/: README.md  eslint.config.js  index.html  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ExtractionOptions.tsx  FileUpload.tsx  LoadingOverlay.tsx  ResultPanel.tsx
frontend/src/lib/: api.ts  storage.ts
src/rfq_drawing_extractor/: __init__.py  agent.py  api.py  chat.py  detection.py  engineering_parser.py  extraction.py  llm_finalizer.py  models.py  normalization.py  report.py  textract_ocr.py  vision_dimensions.py
